--- a/index.html
+++ b/index.html
@@ -217,6 +217,9 @@
     <script id="template-author-link" type="text/x-handlebars-template">
       <li><a href="#{{ id }}">{{ title }}</a></li>
     </script>
+    <script id="template-author-link" type="text/x-handlebars-template">
+      <li><a href="#{{ tagCloudLink }}">{{ title }}</a></li>
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
     <script src="js/script.js"></script>
 </body>
