--- a/index.html
+++ b/index.html
@@ -215,10 +215,12 @@
       <li><a href="#{{ id }}">{{ title }}</a></li>
     </script>
     <script id="template-author-link" type="text/x-handlebars-template">
-      <li><a href="#{{ id }}">{{ title }}</a></li>
+      <a href="#{{ id }}">{{ title }}</a>
     </script>
-    <script id="template-author-link" type="text/x-handlebars-template">
-      <li><a href="#{{ tagCloudLink }}">{{ title }}</a></li>
+    <script id="template-tag-cloud-link" type="text/x-handlebars-template">
+      {{#each tags}}
+      <li>{{ tag }}</li>
+      {{/each}}
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
     <script src="js/script.js"></script>
