--- a/index.html
+++ b/index.html
@@ -222,6 +222,11 @@
       <li>{{ tag }}</li>
       {{/each}}
     </script>
+    <script id="template-author-cloud-link" type="text/x-handlebars-template">
+      {{#each authors}}
+      <li>{{ articleAuthor }}</li>
+      {{/each}}
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
     <script src="js/script.js"></script>
 </body>
