--- a/index.html
+++ b/index.html
@@ -219,12 +219,12 @@
     </script>
     <script id="template-tag-cloud-link" type="text/x-handlebars-template">
       {{#each tags}}
-      <li>{{ tag }}</li>
+      <li class="{{className}}"><a href="#tag-{{ tag }}">{{ tag }} {{count}}</a></li>
       {{/each}}
     </script>
     <script id="template-author-cloud-link" type="text/x-handlebars-template">
       {{#each authors}}
-      <li>{{ articleAuthor }}</li>
+      <li class="{{className}}"><a href="#author-{{ articleAuthors }}">{{ author }}</a></li>
       {{/each}}
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
